# Polinom

./: CMakeLists.txt  README.md
APPS/application_list/: app_list.h
APPS/application_monom/: CMakeLists.txt  app_monom.cpp
APPS/application_polinom/: app_polinom.cpp  app_polinom.h
APPS/application_term/: CMakeLists.txt  app_term.h
LIBS/lib_color/: CMakeLists.txt  Color.h
LIBS/lib_double_hashing_table/: CMakeLists.txt
LIBS/lib_interface_table/: CMakeLists.txt  interface_table.h
LIBS/lib_linear_array_table/: CMakeLists.txt  linear_array_table.h
LIBS/lib_linear_list_table/: CMakeLists.txt  linear_list_table.cpp
LIBS/lib_list/: lib_list.cpp  lib_list.h
LIBS/lib_monom/: CMakeLists.txt  lib_monom.h
LIBS/lib_ordered_array_table/: CMakeLists.txt  ordered_array_table.h
LIBS/lib_polinom/: CMakeLists.txt  lib_polinom.cpp
LIBS/lib_term/: CMakeLists.txt  lib_term.cpp
LIBS/lib_xiaoexpr/: lib_xiaoexpr.cpp
Polinom/: CMakeLists.txt
Polinom/APPS/application_list/: CMakeLists.txt  app_list.cpp  app_list.h
Polinom/APPS/application_monom/: app_monom.cpp  app_monom.h
Polinom/APPS/application_polinom/: CMakeLists.txt  app_polinom.cpp  app_polinom.h
Polinom/APPS/application_term/: app_term.cpp  app_term.h
Polinom/APPS/application_xiaoexpr/: CMakeLists.txt  app_xiaoexpr.cpp  app_xiaoexpr.h
Polinom/LIBS/lib_chain_hash_table/: CMakeLists.txt  chain_hash_table.cpp  chain_hash_table.h
Polinom/LIBS/lib_cmake_funcs/: function.cmake
Polinom/LIBS/lib_color/: Color.cpp  Color.h
Polinom/LIBS/lib_double_hashing_table/: double_hashing_table.cpp  double_hashing_table.h
Polinom/LIBS/lib_interface_table/: interface_table.h
Polinom/LIBS/lib_linear_array_table/: linear_array_table.cpp  linear_array_table.h
Polinom/LIBS/lib_linear_list_table/: linear_list_table.h
Polinom/LIBS/lib_list/: CMakeLists.txt  lib_list.cpp  lib_list.h
Polinom/LIBS/lib_monom/: lib_monom.cpp  lib_monom.h
Polinom/LIBS/lib_ordered_array_table/: ordered_array_table.cpp
Polinom/LIBS/lib_polinom/: lib_polinom.cpp  lib_polinom.h
Polinom/LIBS/lib_red_black_tree_table/: CMakeLists.txt  red_black_tree_table.cpp  red_black_tree_table.h
Polinom/LIBS/lib_term/: lib_term.cpp  lib_term.h
Polinom/LIBS/lib_xiaoexpr/: CMakeLists.txt  lib_xiaoexpr.cpp  lib_xiaoexpr.h
Polinom/TESTS/tests_list/: CMakeLists.txt  test_list.cpp  test_main.cpp
Polinom/TESTS/tests_monom/: test_monom.cpp
Polinom/TESTS/tests_polinom/: test_main.cpp  test_polinom.cpp
Polinom/TESTS/tests_term/: CMakeLists.txt  test_term.cpp
Polinom/TESTS/tests_xiaoexpr/: CMakeLists.txt  test_xiaoexpr.cpp
TESTS/tests_list/: test_list.cpp
TESTS/tests_monom/: CMakeLists.txt
TESTS/tests_polinom/: CMakeLists.txt  test_polinom.cpp
TESTS/tests_term/: test_term.cpp
TESTS/tests_xiaoexpr/: test_xiaoexpr.cpp
